# my-rdkit-app

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  MCP_TESTING_GUIDE.md  PHASE1_COMPLETE.md  main.py  pyproject.toml  requirements.txt  test_mcp.py  uv.toml
backend/src/: ag2_two_agent.py  main.py  mcp_server.py  models.py
backend/src/chemistry/: __init__.py  draw.py  search.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: MoleculeViewer.tsx  SimilarityChecker.tsx
frontend/src/: config.ts
frontend/src/app/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/molecule/: AgentConsole.tsx  MoleculeCard.tsx  MoleculeViewer.tsx  SimilarityChecker.tsx
frontend/src/components/ui/: skeleton.tsx
frontend/src/lib/: types.ts
